# Alembic

./: LICENSE  README.md  alembic.ini  live_migrations.db  pyproject.toml  xpto.sql  xpto2.sql
migrations/: env.py  models.py
migrations/versions/: 4e5ac4536b32_campo_idade_pessoa2.py  574014e8f55c_tabela_pessoa_2.py  7b3ba6c155ff_campo_idade_pessoa_2.py  a7fb5896f14a_campo_de_senha_na_tabela_pessoa.py  d74c237bc232_alteração_do_tamanho_do_campo_email_na_.py  d76c2c15a56e_primeira.py
