[project]
name = "alembic_project"
version = "0.1.0"
description = ""
authors = [
    {name = "ViviCasty",email = "ichpendragon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.16.5,<2.0.0)",
    "sqlalchemy (>=2.0.29,<2.0.42)",
    "sqlacodegen (>=3.1.1,<4.0.0)",
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
